[package]
name = "redox-fatfs"
version = "0.1.0"
license-file = "LICENSE"
authors = ["Deepak Sirone <deepaksirone94@gmail.com>"]

[dependencies]
spin = "0.4"
redox_syscall = "0.1"
uuid = { version = "0.5", features = ["v4"] }
byteorder = "1"
log = "0.4.6"
bitflags = "1.1.0"

[target.'cfg(not(target_os = "redox"))'.dependencies]
fuse = "0.3"
libc = "0.2"
time = "0.1"

[[bin]]
name = "redox-fatfs"
path = "src/bin/mount.rs"
doc = false

[features]
default = ["secure"]
secure = []
